--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Welcome to my Website!!! :)</h1>
-    <h2>we are learning about fast fashion!!! *yayyy*</h2>
+    <h2>we are learning about fast fashioon!!! *yayyy*</h2>
 
     <!--lists ;0-->
     <p>list of fast fashion brands</p>
