--- a/index.html
+++ b/index.html
@@ -4,59 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>leah html assessment</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Welcome to my Website!!! :)</h1>
-    <h2>we are learning about fast fashioon!!! *yayyy*</h2>
-
-    <!--lists ;0-->
-    <p>list of fast fashion brands</p>
-    <ul>
-        <li>forever 21</li>
-        <li>h&m</li>
-        <li>shein</li>
-        <li>fashion nova</li>
-    </ul>
-    <p>reasons why they are bad</p>
-    <ol>
-        <li>unethical</li>
-        <li>low pay</li>
-        <li>bad for the environment</li>
-    </ol>
-
-    <!--links to somewhere-->
-    <a href="https://goodonyou.eco/what-is-fast-fashion/">link to why it is bad >:(</a>
-    <br>
-    <a href="empty.html">link to a surprise :)</a>
-
-    <br>
-    <img src="https://static.wikia.nocookie.net/disney/images/f/f2/Profile_-_Nemo.jpg/revision/latest?cb=20190529221404" width="150">
-    <p>dont kill nemo!!!</p>
-    <p>fast fashion is harmful to the ocean</p>
-
-    <h2>answer some questions!</h2>
-    <p>do you use any of the brands on the list?</p>
     <form>
-        <label for="yes"> Yes </label>
-        <input type="radio" id="yes" name="yes" value="yes">
-        <label for="no"> No</label>
-        <input type="radio" id="No" name="no" value="no">
+    <h1>Puppy Adoption Page</h1>
+    <h2>Please enter your information to adopt a puppy and we'll email you back.</h2>
+    <p>Please Note: First Name, Password, and Email are require d</p>
+    
+    <label for="First Name"> First Name: </label>
+    <input type="First Name" name="First Name" placeholder="First Name">
+    <label for="Last Name"> Last Name: </label>
+    <input type="Last Name" name="Last Name" placeholder="Last Name">
+    <br></br>
 
-        <br>
-        <label for="question">fav brand of clothes?</label>
-        <input type="answer" name="answer" placeholder="type answer here">
+    <label for="Email"> Email: </label>
+    <input type="Email" name="Email" placeholder="Email">
+    <label for="Password"> Password: </label>
+    <input type="Password" name="Password" placeholder="Password">
+    <br></br>
 
-        <br>
-        <p>select the brand you buy most from</p>
-        <select name="selection">
-            <option value="shein">Shein</option>
-            <option value="forever 21">forever 21</option>
-            <option value="hnm">hnm</option>
-        </select>
+    <p>Are you over the age of 18?</p>
+    <label for="yes">Yes:</label>
+    <input type="radio" id="yes" name="age" value="yes">
+    <label for="yes">No:</label>
+    <input type="radio" id="yes" name="age" value="no">
+    
+    <p>Do you have a Credit Card or PayPal?</p>
+    <select name="">
+        <option value="creditcard">Credit Card</option>
+        <option value="paypal">PayPal</option>
+    </select>
+    <br></br>
+    <input type="submit" name="" value="Submit">
 
-        <br>
-        <input type="submit" name="" value="Submit">
     </form>
 </body>
 </html>
