--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li>forever 21</li>
         <li>h&m</li>
         <li>shein</li>
-        <li>fashion nova</li>
+        <li>fashionn nova</li>
     </ul>
     <p>reasons why they are bad</p>
     <ol>
