--- a/Bootstrap5_Project_Signup.html
+++ b/Bootstrap5_Project_Signup.html
@@ -26,7 +26,7 @@
   -->
   <div class="container">
 
-    <form>
+    <form method="get">
       <div class="input-group mb-3">
         <span class="input-group-text" id="basic-addon1">@</span>
         <input type="text" class="form-control" placeholder="email" aria-label="email" aria-describedby="basic-addon1">
@@ -40,7 +40,7 @@
 
       <div class="dropdown">
         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-          Dropdown
+          Dropdown Menu
         </button>
 
         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
