--- a/rootCausesLeah.html
+++ b/rootCausesLeah.html
@@ -7,7 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="researchLeah.html">Link to research.</a>
-    
+    uytahfjghl;jlhjhvgcgvhivdsffg
 </body>
 </html>
