--- a/caseStudyLeah.html
+++ b/caseStudyLeah.html
@@ -7,7 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="researchLeah.html">Link to research.</a>
-    
+    ghjgjfhdsfdgkjcjvwcbkhl;dsszfxgjhlk;hg
 </body>
 </html>
