--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <a href="researchLeah.html">Link to research.</a>
-    
+    <a href="rename.html">Link to html assesment i think</a>
+    <a href="Bootstrap5_Project_Main.html">Link to bootstrap :)</a>
 </body>
 </html>
