--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
     <title>Document</title>
 </head>
 <body>
+    <2>table of continents</2>
+    <br>
     <a href="researchLeah.html">Link to research.</a>
+    <br>
     <a href="rename.html">Link to html assesment i think</a>
+    <br>
     <a href="Bootstrap5_Project_Main.html">Link to bootstrap :)</a>
-
+    <br>
     is it working please do u see this
 </body>
 </html>
