--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <2>table of continents</2>
+    <h2>table of continents</h2>
     <br>
     <a href="researchLeah.html">Link to research.</a>
     <br>
