--- a/rename.html
+++ b/rename.html
@@ -28,7 +28,7 @@
     <!--links to somewhere-->
     <a href="https://goodonyou.eco/what-is-fast-fashion/">link to why it is bad >:(</a>
     <br>
-    <a href="empty.html">link to a surprise :)</a>
+    <a href="iempty.html">link to a surprise :)</a>
 
     <br>
     <img src="https://static.wikia.nocookie.net/disney/images/f/f2/Profile_-_Nemo.jpg/revision/latest?cb=20190529221404" width="150">
