--- a/initialResearch.html
+++ b/initialResearch.html
@@ -59,9 +59,19 @@ https://getbootstrap.com/docs/5.2/layout/grid/#equal-width  -->
 
       <div class="col">
         <ul>
-          <li> Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta sit libero quaerat. Obcaecati a itaque accusantium, maiores delectus debitis voluptas dolor magnam optio repudiandae pariatur vel libero perferendis voluptatum exercitationem!</li>
+          <li> Loorem ipsum dolor sit amet consectetur adipisicing elit. Soluta sit libero quaerat. Obcaecati a itaque accusantium, maiores delectus debitis voluptas dolor magnam optio repudiandae pariatur vel libero perferendis voluptatum exercitationem!</li>
         </ul>
       </div>
+
+      <div class="container">
+        <div class="text-bg-warning p-3">
+            <ul>
+              <li><a href="https://www.panaprium.com/blogs/i/fast-fashion-workers-conditions#:~:text=They%20work%20on%20farms%20and,doesn't%20pay%20living%20wages."></a></li>
+
+            </ul>
+        </div>
+
+    </div>
     </div>
   </div>
 <!-- Add the bootstrap script down here -->
