--- a/initialResearch.html
+++ b/initialResearch.html
@@ -65,7 +65,7 @@ https://getbootstrap.com/docs/5.2/layout/grid/#equal-width  -->
 
       <div class="container">
             <ul>
-              <li><a href="https://www.panaprium.com/blogs/i/fast-fashion-workers-conditions#:~:text=They%20work%20on%20farms%20and,doesn't%20pay%20living%20wages."></a></li>
+              <li><p><a href="https://www.panaprium.com/blogs/i/fast-fashion-workers-conditions#:~:text=They%20work%20on%20farms%20and,doesn't%20pay%20living%20wages."></a></p></li>
 
             </ul>
         </div>
