--- a/initialResearch.html
+++ b/initialResearch.html
@@ -33,7 +33,7 @@ https://getbootstrap.com/docs/5.2/layout/grid/#equal-width  -->
         <div class="container">
             <div class="text-bg-warning p-3">
                 <p class="fs-1">Problem Statement</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis ex pariatur accusamus, nobis itaque soluta doloremque suscipit eius magnam, dolore, minus earum qui voluptatem ducimus consequuntur. Quis ullam recusandae atque.</p>
+                <p>The fast fashion industry mistreats and exploits its workers, and workers aren’t paid living wages, they’re constantly abused, and they work in sweatshop-like conditions. </p>
             </div>
         </div>
       </div>
@@ -64,7 +64,7 @@ https://getbootstrap.com/docs/5.2/layout/grid/#equal-width  -->
       </div>
 
       <div class="container">
-          <p>hi</p>
+          <p></p>
 
         </div>
 
