--- a/initialResearch.html
+++ b/initialResearch.html
@@ -39,7 +39,8 @@ https://getbootstrap.com/docs/5.2/layout/grid/#equal-width  -->
       </div>
         <div class="col">
            <div class="text-bg-info p-3"><p class="fs-1"> Need statement</p>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum fuga qui ea eum adipisci sint eveniet quod quo veniam esse delectus ex aperiam facilis inventore, eos nam assumenda magnam exercitationem?</p>
+              <p>There needs to be more awareness of the fast fashion industry in order for people to stop buying from these companies that support sweatshop-like working conditions so the industry can lose support and more ethical and sustainable companies can be supported. 
+              </p>
            </div>
       </div>
     </div>
