the links better wor

--- a/initialResearch.html
+++ b/initialResearch.html
@@ -65,11 +65,13 @@ https://getbootstrap.com/docs/5.2/layout/grid/#equal-width  -->
       </div>
 
       <div class="container">
-          <p></p>
+          <a href="https://www.panaprium.com/blogs/i/fast-fashion-workers-conditions#:~:text=They%20work%20on%20farms%20and,doesn't%20pay%20living%20wages."></a>
+          <a href="https://www.ecowatch.com/will-americas-love-for-cheap-clothing-doom-the-sustainable-fashion-mov-1891128666.html"></a>
+          <a href="https://www.militaryspouse.com/spouse-101/fashion/5-ethical-issues-in-the-fashion-industry/"></a>
 
         </div>
 
-    </div>
+     </div>
     </div>
   </div>
 <!-- Add the bootstrap script down here -->
