--- a/initialResearch.html
+++ b/initialResearch.html
@@ -48,23 +48,24 @@ https://getbootstrap.com/docs/5.2/layout/grid/#equal-width  -->
       
       <div class="col">
         <ul>
-          <li> Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta sit libero quaerat. Obcaecati a itaque accusantium, maiores delectus debitis voluptas dolor magnam optio repudiandae pariatur vel libero perferendis voluptatum exercitationem!</li>
+          <li>The fast fashion industry is continuously violating human rights by exploiting workers from developing and underserved countries, employing children, and forcing them to work in sweatshops. Alex Assoune (MS), Chief Executive Officer of Panaprium, a sustainable fashion brand, states that “the fast fashion industry exploits local and underserved communities in sweatshops to produce cheap garments.” </li>
         </ul>
       </div>
 
       <div class="col">
         <ul>
-          <li> Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta sit libero quaerat. Obcaecati a itaque accusantium, maiores delectus debitis voluptas dolor magnam optio repudiandae pariatur vel libero perferendis voluptatum exercitationem!</li>
+          <li>Most of the workers who create the clothes consist of children and women who are often abused. Women face harassment, abuse, and sexual assault when in the workplace. Alex Assoune states that, “many young women work in garments factories, being sexually abused, and forced to abort their pregnancy.”</li>
         </ul>
       </div>
 
       <div class="col">
         <ul>
-          <li> Loorem ipsum dolor sit amet consectetur adipisicing elit. Soluta sit libero quaerat. Obcaecati a itaque accusantium, maiores delectus debitis voluptas dolor magnam optio repudiandae pariatur vel libero perferendis voluptatum exercitationem!</li>
+          <li>Workers are forced to work in sweatshops which expose them to dangerous chemicals. They can be exposed to pesticides which can cause depression, seizures, headaches, or loss of consciousness. Workers are forced to work long hours in these conditions prolonging their exposure to dangerous chemicals. </li>
         </ul>
       </div>
 
       <div class="container">
+        <h2>Sources</h2>
           <ul>
           <li><a href="https://www.panaprium.com/blogs/i/fast-fashion-workers-conditions#:~:text=They%20work%20on%20farms%20and,doesn't%20pay%20living%20wages.">The Truth About Workers Conditions In Fast Fashion</a></li>
           <li><a href="https://www.ecowatch.com/will-americas-love-for-cheap-clothing-doom-the-sustainable-fashion-mov-1891128666.html">Will America’s Love for Cheap Clothing Doom the Sustainable Fashion Movement?</a></li>
