--- a/initialResearch.html
+++ b/initialResearch.html
@@ -70,9 +70,9 @@ https://getbootstrap.com/docs/5.2/layout/grid/#equal-width  -->
           <li><a href="https://www.panaprium.com/blogs/i/fast-fashion-workers-conditions#:~:text=They%20work%20on%20farms%20and,doesn't%20pay%20living%20wages.">The Truth About Workers Conditions In Fast Fashion</a></li>
           
           <li><a href="https://www.ecowatch.com/will-americas-love-for-cheap-clothing-doom-the-sustainable-fashion-mov-1891128666.html">Will America’s Love for Cheap Clothing Doom the Sustainable Fashion Movement?</a></li>
-          <li>Left Bias - Mostly Factual</li>
+          Left Bias - Mostly Factual
           <li><a href="https://www.militaryspouse.com/spouse-101/fashion/5-ethical-issues-in-the-fashion-industry/">5 Ethical Issues in the Fast Fashion Industry</a></li>
-          
+
           </ul>
 
         </div>
