--- a/rootCausesLeah.html
+++ b/rootCausesLeah.html
@@ -11,5 +11,20 @@
         <p class="fs-1">Root Causes!</p>
     </div>
 
+    <div class="row">
+        <div class="col">
+          <div class="container">
+              <div class="text-bg-warning p-3">
+                  <p class="fs-1">Problem Statement</p>
+                  <p>The fast fashion industry mistreats and exploits its workers, and workers aren’t paid living wages, they’re constantly abused, and they work in sweatshop-like conditions. </p>
+              </div>
+          </div>
+        </div>
+
+
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"></script>
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
