root casuse ahiejbyuvviuv

--- a/rootCausesLeah.html
+++ b/rootCausesLeah.html
@@ -15,8 +15,14 @@
         <div class="col">
           <div class="container">
               <div class="text-bg-warning p-3">
-                  <p class="fs-1">Problem Statement</p>
-                  <p>The fast fashion industry mistreats and exploits its workers, and workers aren’t paid living wages, they’re constantly abused, and they work in sweatshop-like conditions. </p>
+                  <p class="fs-1">Root Causes</p>
+                  <p>
+                    <li>
+                        <ul>People want more clothes at a cheap price so fast fashion industries are able to expand because of increased demand. </ul>
+                        <ul>Employers exploit workers in underdeveloped countries because they don’t have strict labor laws. </ul>
+
+                    </li>
+                  </p>
               </div>
           </div>
         </div>
