--- a/rootCausesLeah.html
+++ b/rootCausesLeah.html
@@ -18,9 +18,8 @@
                   <p class="fs-1">Root Causes</p>
                   <p>
                     <li>
-                        <ul>People want more clothes at a cheap price so fast fashion industries are able to expand because of increased demand. </ul>
-                        <ul>Employers exploit workers in underdeveloped countries because they don’t have strict labor laws. </ul>
-
+                        <ul><p>People want more clothes at a cheap price so fast fashion industries are able to expand because of increased demand. </p></ul>
+                        <ul><p>Employers exploit workers in underdeveloped countries because they don’t have strict labor laws. </p></ul>
                     </li>
                   </p>
               </div>
