lol root causes

--- a/rootCausesLeah.html
+++ b/rootCausesLeah.html
@@ -17,10 +17,10 @@
               <div class="text-bg-warning p-3">
                   <p class="fs-1">Root Causes</p>
                   <p>
-                    <li>
-                        <ul><p>People want more clothes at a cheap price so fast fashion industries are able to expand because of increased demand. </p></ul>
-                        <ul><p>Employers exploit workers in underdeveloped countries because they don’t have strict labor laws. </p></ul>
-                    </li>
+                    <ul>
+                        <li>People want more clothes at a cheap price so fast fashion industries are able to expand because of increased demand.</ul>
+                        <li>Employers exploit workers in underdeveloped countries because they don’t have strict labor laws.</ul>
+                    </ul>
                   </p>
               </div>
           </div>
