i think i added another box

--- a/rootCausesLeah.html
+++ b/rootCausesLeah.html
@@ -15,16 +15,30 @@
         <div class="col">
           <div class="container">
               <div class="text-bg-warning p-3">
-                  <p class="fs-1">Root Causes</p>
+                  <p class="fs-1">Root Cause 1</p>
                   <p>
                     <ul>
                         <li>People want more clothes at a cheap price so fast fashion industries are able to expand because of increased demand.</ul>
-                        <li>Employers exploit workers in underdeveloped countries because they don’t have strict labor laws.</ul>
                     </ul>
                   </p>
               </div>
           </div>
         </div>
+
+        <div class="row">
+            <div class="col">
+              <div class="container">
+                  <div class="text-bg-warning p-3">
+                      <p class="fs-1">Root Cause 1</p>
+                      <p>
+                        <ul>
+                            <li>Employers exploit workers in underdeveloped countries because they don’t have strict labor laws.</li>
+                        </ul>
+                      </p>
+                  </div>
+              </div>
+            </div>
+       
 
 
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
