--- a/rootCausesLeah.html
+++ b/rootCausesLeah.html
@@ -24,6 +24,7 @@
               </div>
           </div>
         </div>
+    </div>
 
         <div class="row">
             <div class="col">
@@ -38,6 +39,7 @@
                   </div>
               </div>
             </div>
+         </div>
        
 
 
