--- a/rootCausesLeah.html
+++ b/rootCausesLeah.html
@@ -29,7 +29,7 @@
         <div class="row">
             <div class="col">
               <div class="container">
-                  <div class="text-bg-warning p-3">
+                  <div class="text-bg-info p-3">
                       <p class="fs-1">Root Cause 1</p>
                       <p>
                         <ul>
