--- a/rootCausesLeah.html
+++ b/rootCausesLeah.html
@@ -7,6 +7,19 @@
     <title>Document</title>
 </head>
 <body>
+<!--NAV BAR-->
+    <nav class="navbar navbar-expand-lg bg-light">
+        <a class="navbar-brand" href="">clothing</a> 
+        <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Dropdown links
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="initialResearch.html">Initial Research</a></li>
+            <li><a class="dropdown-item" href="rootCausesLeah.html">Root Causes </a></li>
+            <li><a class="dropdown-item" href="caseStudyLeah.html">Case Study</a></li>
+          </ul>
+    </nav>
+<!--ROOT CAUSES 1-->
     <div class="row">
         <p class="fs-1">Root Causes!</p>
     </div>
@@ -25,7 +38,19 @@
           </div>
         </div>
     </div>
+
+    <div class="row">
+        <div class="container">
+            <div class="col">
+            <p class="fs-1">Evidence</p>
+            <ul>
+              <li>The fast fashion industry is continuously violating human rights by exploiting workers from developing and underserved countries, employing children, and forcing them to work in sweatshops. Alex Assoune (MS), Chief Executive Officer of Panaprium, a sustainable fashion brand, states that “the fast fashion industry exploits local and underserved communities in sweatshops to produce cheap garments.” </li>
+            </ul>
+            </div>
+        </div>
+    </div>
 <br>
+<!--ROOT CAUSES 2-->
         <div class="row">
             <div class="col">
               <div class="container">
