--- a/rootCausesLeah.html
+++ b/rootCausesLeah.html
@@ -20,9 +20,6 @@
           </ul>
     </nav>
 <!--ROOT CAUSES 1-->
-    <div class="row">
-        <p class="fs-1">Root Causes!</p>
-    </div>
 
     <div class="row">
         <div class="col">
@@ -40,12 +37,12 @@
     </div>
 
     <div class="row">
-        <div class="container">
             <div class="col">
-            <p class="fs-1">Evidence</p>
-            <ul>
-              <li>The fast fashion industry is continuously violating human rights by exploiting workers from developing and underserved countries, employing children, and forcing them to work in sweatshops. Alex Assoune (MS), Chief Executive Officer of Panaprium, a sustainable fashion brand, states that “the fast fashion industry exploits local and underserved communities in sweatshops to produce cheap garments.” </li>
-            </ul>
+                <div class="container">
+                    <p class="fs-1">Evidence</p>
+                    <ul>
+                    <li>Increased demand for a lot of cheap clothing has caused the fast fashion industry to expand</li>
+                    </ul>
             </div>
         </div>
     </div>
