--- a/rootCausesLeah.html
+++ b/rootCausesLeah.html
@@ -39,7 +39,7 @@
     <div class="row">
             <div class="col">
                 <div class="container">
-                    <p class="fs-1">Evidence</p>
+                    <h4>Evidence</h4>
                     <ul>
                     <li>Increased demand for a lot of cheap clothing has caused the fast fashion industry to expand</li>
                     </ul>
