--- a/rootCausesLeah.html
+++ b/rootCausesLeah.html
@@ -37,14 +37,25 @@
     </div>
 
     <div class="row">
-            <div class="col">
-                <div class="container">
-                    <h4>Evidence</h4>
+
+        <div class="col">
+            <div class="container">
+                    <h6>Evidence 1</h6>
                     <ul>
                     <li>Increased demand for a lot of cheap clothing has caused the fast fashion industry to expand</li>
                     </ul>
             </div>
         </div>
+
+        <div class="col">
+            <div class="container">
+                    <h6>Explanation</h6>
+                    <ul>
+                    <li>An increased demand in clothing leads to companies needing a higher and faster production rate, and they need more employees to create garments.</li>
+                    </ul>
+            </div>
+        </div>
+
     </div>
 <br>
 <!--ROOT CAUSES 2-->
