--- a/rootCausesLeah.html
+++ b/rootCausesLeah.html
@@ -37,6 +37,7 @@
     </div>
 
     <div class="row">
+        <div class="container>">
 
         <div class="col">
                     <h6>Evidence 1</h6>
@@ -51,7 +52,8 @@
                     <li>An increased demand in clothing leads to companies needing a higher and faster production rate, and they need more employees to create garments.</li>
                     </ul>
         </div>
-
+        
+        </div>
     </div>
 <br>
 <!--ROOT CAUSES 2-->
