--- a/rootCausesLeah.html
+++ b/rootCausesLeah.html
@@ -37,7 +37,7 @@
     </div>
 
     <div class="row">
-        <div class="container>">
+        <div class="container">
 
         <div class="col">
                     <h6>Evidence 1</h6>
@@ -52,7 +52,14 @@
                     <li>An increased demand in clothing leads to companies needing a higher and faster production rate, and they need more employees to create garments.</li>
                     </ul>
         </div>
-        
+
+        <div class="col">
+            <h6>Implication</h6>
+            <ul>
+            <li>This means that employers would want to be able to have workers that will accept the high demand and low prices.</li>
+            </ul>
+        </div>
+
         </div>
     </div>
 <br>
