uychbvsdbhd sjbh fsd

--- a/rootCausesLeah.html
+++ b/rootCausesLeah.html
@@ -42,7 +42,9 @@
         <div class="col">
                     <h6>Evidence 1</h6>
                     <ul>
-                    <li>Increased demand for a lot of cheap clothing has caused the fast fashion industry to expand</li>
+                    <li>"ethical issues are further provoked by the societal characterstics, industry's features and supply chains
+                        characteristics as well as consumers' behaviour."
+                    </li>
                     </ul>
         </div>
 
