--- a/rootCausesLeah.html
+++ b/rootCausesLeah.html
@@ -64,6 +64,34 @@
 
         </div>
     </div>
+
+    <div class="container">
+        <div class="row">
+
+        <div class="col">
+                    <h6>Evidence 2</h6>
+                    <ul>
+                    <li>"It is a paradox that consumers, despite their awareness of sustainability and ethical challenges facing in the current
+                    society, still develop a positive attitude toward fast fashion brands. "</li>
+                    </ul>
+        </div>
+
+        <div class="col">
+                    <h6>Explanation</h6>
+                    <ul>
+                    <li>This means that consumers will still buy from fast fashion companies despite knowing the horrible situations behind the cheap clothing. This is very significant because it shows that people are aware of the situations.</li>
+                    </ul>
+        </div>
+
+        <div class="col">
+                    <h6>Implication</h6>
+                    <ul>
+                        <li>If there was more awareness people would most likely care more. If these condotions were to happen in a more devoloped country where consumers would probably care more because it closely affects them.</li>
+                    </ul>
+        </div>
+
+        </div>
+    </div>
 <br>
 <!--ROOT CAUSES 2-->
         <div class="row">
