should be a nav bar

--- a/caseStudyLeah.html
+++ b/caseStudyLeah.html
@@ -7,6 +7,22 @@
     <title>Document</title>
 </head>
 <body>
-    ghjgjfhdsfdgkjcjvwcbkhl;dsszfxgjhlk;hg
+    <!--NAVBAR-->
+    <nav class="navbar navbar-expand-lg bg-light">
+        <a class="navbar-brand" href="">clothing</a> 
+        <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Dropdown links
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="initialResearch.html">Initial Research</a></li>
+            <li><a class="dropdown-item" href="rootCausesLeah.html">Root Causes </a></li>
+            <li><a class="dropdown-item" href="caseStudyLeah.html">Case Study</a></li>
+          </ul>
+    </nav>
+
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
