--- a/caseStudyLeah.html
+++ b/caseStudyLeah.html
@@ -20,6 +20,14 @@
           </ul>
     </nav>
 
+    <div class="container">
+        <li>
+            <ol>The solution to stop bad ethics in fast fashion is to stop buying clothes from fast fashion manufacturers and </ol>
+
+        </li>
+
+
+    </div>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"></script>
