--- a/caseStudyLeah.html
+++ b/caseStudyLeah.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Case Study</title>
 </head>
 <body>
     <!--NAVBAR-->
@@ -20,13 +20,14 @@
           </ul>
     </nav>
 
+    <div class="row">
     <div class="container">
         <li>
-            <ol>The solution to stop bad ethics in fast fashion is to stop buying clothes from fast fashion manufacturers and </ol>
+            <ol>The solution to stop bad ethics in fast fashion is to stop buying clothes from fast fashion manufacturers and to buy less clothes but better quality clothing or to thrift or do clothing swaps.</ol>
 
         </li>
 
-
+        </div>
     </div>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
