--- a/caseStudyLeah.html
+++ b/caseStudyLeah.html
@@ -24,6 +24,8 @@
     <div class="row">
         <ol>
             <li>The solution to stop bad ethics in fast fashion is to stop buying clothes from fast fashion manufacturers and to buy less clothes but better quality clothing or to thrift or do clothing swaps.</ol>
+            <li>Online organizations and websites try to bring awareness and methods that allow people to stop buying from fast fashion brands. An organization called Fashion Revolution is an organization who is trying to improve working conditions for fast fashion workers and is trying to improve the way clothing is sourced, made, and consumed. </li>
+            <li></li>
 
         </ol>
 
