--- a/caseStudyLeah.html
+++ b/caseStudyLeah.html
@@ -22,12 +22,12 @@
 
     <div class="container">
     <div class="row">
-        <ol>
-            <li>The solution to stop bad ethics in fast fashion is to stop buying clothes from fast fashion manufacturers and to buy less clothes but better quality clothing or to thrift or do clothing swaps.</ol>
-            <li>whats happening</li>
+        <li>
+            <ol>The solution to stop bad ethics in fast fashion is to stop buying clothes from fast fashion manufacturers and to buy less clothes but better quality clothing or to thrift or do clothing swaps.</ol>
+            <ol>whats happening</ol>
 
     
-        </ol>
+            </li>
 
         </div>
     </div>
