--- a/caseStudyLeah.html
+++ b/caseStudyLeah.html
@@ -22,12 +22,13 @@
 
     <div class="container">
     <div class="row">
-        <li>
-            <ol>The solution to stop bad ethics in fast fashion is to stop buying clothes from fast fashion manufacturers and to buy less clothes but better quality clothing or to thrift or do clothing swaps.</ol>
-            <ol>whats happening</ol>
+       <li>
+            <ol>A method to prevent poor ethics from fast fashion is to buy clothes that are higher quality or to buy thrifted clothing and do clothing swaps.</ol>
+            <ol>Online organizations and websites try to bring awareness and methods that allow people to stop buying from fast fashion brands. An organization called Fashion Revolution is an organization who is trying to improve working conditions for fast fashion workers and is trying to improve the way clothing is sourced, made, and consumed. </ol>
+            <ol>Bring more advocacy towards thrifting and buying better quality clothing at a slower rate.</ol>
 
-    
-            </li>
+
+       </li>
 
         </div>
     </div>
