--- a/initialResearch.html
+++ b/initialResearch.html
@@ -20,7 +20,16 @@
   Use https://getbootstrap.com/docs/5.2/customize/color/ to adjust color attributes 
   (there's also different pages with background color, opacity, etc )-->  
   <nav class="navbar navbar-expand-lg bg-light">
-    <a class="navbar-brand" href="">clothing</a> </nav>
+    <a class="navbar-brand" href="">clothing</a> 
+    <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+        Dropdown links
+      </a>
+      <ul class="dropdown-menu">
+        <li><a class="dropdown-item" href="initialResearch.html">Initial Research</a></li>
+        <li><a class="dropdown-item" href="rootCausesLeah.html">Root Causes </a></li>
+        <li><a class="dropdown-item" href="caseStudyLeah.html">Case Study</a></li>
+      </ul>
+</nav>
 <div class="container text-center">
 <!-- To begin to understand how the following "grid" works, check out this link. This is the code we have below
 https://getbootstrap.com/docs/5.2/layout/grid/#equal-width  -->
