--- a/caseStudyLeah.html
+++ b/caseStudyLeah.html
@@ -20,12 +20,20 @@
           </ul>
     </nav>
 
+    <div class="container">
+      <div class="text-bg-warning">
+        <h3>Case Study</h3>
+
+
+      </div>
+    </div>
+
    <div class="container">
     <div class="text-bg-info p-3">
        <ol>
             <li>A method to prevent poor ethics from fast fashion is to buy clothes that are higher quality or to buy thrifted clothing and do clothing swaps.</li>
             <li>Online organizations and websites try to bring awareness and methods that allow people to stop buying from fast fashion brands. An organization called Fashion Revolution is an organization who is trying to improve working conditions for fast fashion workers and is trying to improve the way clothing is sourced, made, and consumed. </li>
-            <li>Bring more advocacy towards thrifting and buying better quality clothing at a slower rate. 0</li>
+            <li>Bring more advocacy towards thrifting and buying better quality clothing at a slower rate.</li>
        </ol>
        </div>
     </div>
