--- a/caseStudyLeah.html
+++ b/caseStudyLeah.html
@@ -22,7 +22,7 @@
 
     <div class="container">
       <div class="text-bg-warning">
-        <h3>Case Study</h3>
+        <h3 class="text-center">Case Study</h3>
 
 
       </div>
