--- a/caseStudyLeah.html
+++ b/caseStudyLeah.html
@@ -21,7 +21,7 @@
     </nav>
 
     <div class="container">
-      <div class="text-bg-warning">
+      <div class="text-bg-success">
         <h3 class="text-center">Case Study</h3>
 
 
