navbar changes i thhhink shfiwu

--- a/initialResearch.html
+++ b/initialResearch.html
@@ -20,7 +20,7 @@
   Use https://getbootstrap.com/docs/5.2/customize/color/ to adjust color attributes 
   (there's also different pages with background color, opacity, etc )-->  
   <nav class="navbar navbar-expand-lg bg-light">
-    <a class="navbar-brand" href="">clothing</a> 
+    <a class="navbar-brand" href="researchLeah.html">clothing</a> 
     <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
         Dropdown links
       </a>
