--- a/caseStudyLeah.html
+++ b/caseStudyLeah.html
@@ -9,7 +9,7 @@
 <body>
     <!--NAVBAR-->
     <nav class="navbar navbar-expand-lg bg-light">
-        <a class="navbar-brand" href="">clothing</a> 
+        <a class="navbar-brand" href="researchLeah.html">clothing</a> 
         <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Dropdown links
           </a>
