--- a/researchLeah.html
+++ b/researchLeah.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-light">
-        <a class="navbar-brand" href="researchLeah.html">clothing</a> 
+        <a class="navbar-brand" href="researchLeah.html">Home</a> 
         <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Dropdown links
           </a>
