--- a/researchLeah.html
+++ b/researchLeah.html
@@ -25,11 +25,12 @@
     <div class="container">
       <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
+          <div class="container">
           <div class="carousel-item active">
-            <img src="https://images.unsplash.com/photo-1523626752472-b55a628f1acc?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=2e90eae0238ba64cc447f3be7f522c19&auto=format&fit=crop&w=1575&q=80" class="d-block w-50" alt="...">
+            <img src="https://images.unsplash.com/photo-1603782637810-95d06f1d5663?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8ZmFzdCUyMGZhc2hpb258ZW58MHx8MHx8&w=1000&q=80" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="https://images.unsplash.com/photo-1517519014922-8fc06b814a0e?ixlib=rb-0.3.5&s=612f05d638cc31fd235cbfb2d21bcfc0&auto=format&fit=crop&w=1352&q=80" class="d-block w-50" alt="...">
+            <img src="https://images.unsplash.com/photo-1606053929013-311c13f97b5f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1000&q=80" class="d-block w-50" alt="...">
           </div>
           <div class="carousel-item">
             <img src="https://images.unsplash.com/photo-1517849845537-4d257902454a?ixlib=rb-0.3.5&s=b40cfb86768850f7623bfcfef2a5ba0f&auto=format&fit=crop&w=1575&q=80" class="d-block w-50" alt="...">
@@ -42,6 +43,7 @@
           </div>
           <div class="carousel-item">
             <img src="https://images.unsplash.com/photo-1517423738875-5ce310acd3da?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=b1523dbf0339fcfcadbe96fe4eb2f8b2&auto=format&fit=crop&w=1410&q=80" class="d-block w-50" alt="...">
+          </div>
           </div>
         </div>
       </div>
