--- a/researchLeah.html
+++ b/researchLeah.html
@@ -25,26 +25,14 @@
     <div class="container">
       <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
-          <div class="container">
-          <div class="carousel-item active">
-            <img src="https://images.unsplash.com/photo-1603782637810-95d06f1d5663?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8ZmFzdCUyMGZhc2hpb258ZW58MHx8MHx8&w=1000&q=80" alt="...">
+         
+          <div class="carousel-item">
+            <img src="https://images.unsplash.com/photo-1603782637810-95d06f1d5663?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8ZmFzdCUyMGZhc2hpb258ZW58MHx8MHx8&w=1000&q=80" class="d-block w-50" alt="...">
           </div>
           <div class="carousel-item">
             <img src="https://images.unsplash.com/photo-1606053929013-311c13f97b5f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1000&q=80" class="d-block w-50" alt="...">
           </div>
-          <div class="carousel-item">
-            <img src="https://images.unsplash.com/photo-1517849845537-4d257902454a?ixlib=rb-0.3.5&s=b40cfb86768850f7623bfcfef2a5ba0f&auto=format&fit=crop&w=1575&q=80" class="d-block w-50" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="https://images.unsplash.com/photo-1518020382113-a7e8fc38eac9?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=71d59cd22de21da8d2939bc203617983&auto=format&fit=crop&w=1560&q=80" class="d-block w-50" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="https://images.unsplash.com/photo-1517423568366-8b83523034fd?ixlib=rb-0.3.5&s=d68543202e54ab0235f6d1defcc4dfe7&auto=format&fit=crop&w=1575&q=80" class="d-block w-50" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="https://images.unsplash.com/photo-1517423738875-5ce310acd3da?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=b1523dbf0339fcfcadbe96fe4eb2f8b2&auto=format&fit=crop&w=1410&q=80" class="d-block w-50" alt="...">
-          </div>
-          </div>
+
         </div>
       </div>
     </div>
