--- a/researchLeah.html
+++ b/researchLeah.html
@@ -27,10 +27,10 @@
         <div class="carousel-inner">
          
           <div class="carousel-item">
-            <img src="https://images.unsplash.com/photo-1603782637810-95d06f1d5663?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8ZmFzdCUyMGZhc2hpb258ZW58MHx8MHx8&w=1000&q=80" class="d-block w-50" alt="...">
+            <img src="https://images.unsplash.com/photo-1603782637810-95d06f1d5663?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8ZmFzdCUyMGZhc2hpb258ZW58MHx8MHx8&w=1000&q=80" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="https://images.unsplash.com/photo-1606053929013-311c13f97b5f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1000&q=80" class="d-block w-50" alt="...">
+            <img src="https://images.unsplash.com/photo-1606053929013-311c13f97b5f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1000&q=80" alt="...">
           </div>
 
         </div>
