--- a/researchLeah.html
+++ b/researchLeah.html
@@ -26,7 +26,7 @@
       <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
          
-          <div class="carousel-item">
+          <div class="carousel-item active">
             <img src="https://images.unsplash.com/photo-1603782637810-95d06f1d5663?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8ZmFzdCUyMGZhc2hpb258ZW58MHx8MHx8&w=1000&q=80" alt="...">
           </div>
           <div class="carousel-item">
