--- a/researchLeah.html
+++ b/researchLeah.html
@@ -30,7 +30,7 @@
         <div class="carousel-inner">
          
           <div class="carousel-item active">
-            <img src="https://images.unsplash.com/photo-1603782637810-95d06f1d5663?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8ZmFzdCUyMGZhc2hpb258ZW58MHx8MHx8&w=1000&q=80"  class="rounded mx-auto d-block" alt="...">
+            <img src="https://images.unsplash.com/photo-1603782637810-95d06f1d5663?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8ZmFzdCUyMGZhc2hpb258ZW58MHx8MHx8&w=1000&q=80"  class="rounded mx-auto d-block w-50" alt="...">
           </div>
 
           <div class="carousel-item">
