--- a/researchLeah.html
+++ b/researchLeah.html
@@ -41,6 +41,10 @@
       </div>
     </div>
 
+    <div>
+      <p>Is there truly a way to end bad ethics in the fast fashion industry?</p>
+    </div>
+
     
 
 
