--- a/researchLeah.html
+++ b/researchLeah.html
@@ -41,7 +41,7 @@
       </div>
     </div>
 
-    <div>
+    <div class="container">
       <p>Is there truly a way to end bad ethics in the fast fashion industry?</p>
     </div>
 
