--- a/researchLeah.html
+++ b/researchLeah.html
@@ -42,7 +42,7 @@
     </div>
 
     <div class="container">
-      <p>Is there truly a way to end bad ethics in the fast fashion industry?</p>
+      <h2>Is there truly a way to end bad ethics in the fast fashion industry?</h2>
     </div>
 
     
