--- a/researchLeah.html
+++ b/researchLeah.html
@@ -42,7 +42,7 @@
     </div>
 
     <div class="container">
-      <h2>Is there truly a way to end bad ethics in the fast fashion industry?</h2>
+      <h2>In ways is fast fashion ethical or non-ethical and what causes it to be this way?</h2>
     </div>
 
     
