--- a/researchLeah.html
+++ b/researchLeah.html
@@ -42,7 +42,7 @@
     </div>
 
     <div class="container">
-      <h2>In ways is fast fashion ethical or non-ethical and what causes it to be this way?</h2>
+      <h2>Are there any possible ways to end fast fashion?</h2>
     </div>
 
     
