--- a/researchLeah.html
+++ b/researchLeah.html
@@ -42,7 +42,7 @@
     </div>
 
     <div class="container">
-      <h2>Are there any possible ways to end fast fashion?</h2>
+      <h2>Are there any possible ways to end the ethical issues within fast fashion?</h2>
     </div>
 
     
