--- a/rootCausesLeah.html
+++ b/rootCausesLeah.html
@@ -86,7 +86,7 @@
         <div class="col">
                     <h6>Implication</h6>
                     <ul>
-                        <li>If there was more awareness people would most likely care more. If these condotions were to happen in a more devoloped country where consumers would probably care more because it closely affects them.</li>
+                        <li>If there was more awareness people would most likely care more. If these conditions were to happen in a more devoloped country where consumers would probably care more because it closely affects them.</li>
                     </ul>
         </div>
 
